Changes towards version 0.5:
- Fixed T-Pet compulsion graphics (partially); bug #772 - Alex
- Doing game-state file I/O in memory instead of temp files;
  should avoid problems as in bug #752 - Alex
- Separate config_win.h file for build.sh builds on Windows - SvdB
- Fixed a typo ("we" -> "he") in Thraddash dialog (bug #783) - Alex
- Corrected grammar in Umgah 'Caster lander report (bug #781);
  from James Ho
- Options selected in the Setup Menu now persist across runs -Michael
- Added a simple implementation of key-value pair "resource" files
  for organizing simple data such as configuration options -Michael
- Added a 'fullscreen' setup menu option - Alex
- Fixed a bug that prevented Slylandro Probes from ever showing up
  in interplanetary exploration (found by SvdB, bug #768)
- Lowered the Comm ambient animation rate from 120 to 40fps, thus
  limiting the CPU usage - Alex
- Fixed Recursive Mutexes to still work even if the ThreadID is 0
  (bug 779) - Michael
- Permit independent selection of graphics driver and resolution in
  setup menu - Michael
- Changed comm subtitle caching to use own context instead of
  screen grabs; should resolve Blue Comm Screen universally - Alex
- Added missing break statement in DrawBatch:RECT_PRIM - Alex
- Setup menu split into four submenus - Michael
- Fixed fallback in getHomeDir() for when $HOME is not defined on *nix
  - SvdB
- %APPDATA% fallback no longer to "../userdata", but to "./userdata",
  as we don't chdir() to the content dir anymore. - SvdB
- Commander Hayes flickering lights animation now properly reenabled
  when applicable (bug #777) - Alex
- Refactored setupmenu code to use generic widgets - Michael
- Support UTF-8 chars in mineral names (bug #770) - SvdB
- Modified scalers to use surface pitch instead of width - reported to
  fix bug #740 - Michael
- Cleaner build output. Set '$MAKE_VERBOSE' to 1 for old output. - SvdB
- Improved dependency tracking for unix build system. - SvdB