@@ -28,11 +28,9 @@ uqm_requirements()
 	check_endianness
 
 
-	# Libraries used
+	# Libraries always used
 	use_library SDL 1.2.3 || exit 1
 	use_library SDL_image || exit 1
-	#have_library vorbis || exit 1
-	have_library vorbisfile || exit 1
 
 
 	# Add defines for HAVE_READDIR_R, HAVE_SETENV, HAVE_STRUPR
@@ -56,7 +54,7 @@ uqm_requirements()
 uqm_prepare_config()
 {
 	# Describe the menu:
-	MENU_main_ITEMS="debug graphics sound ioformat"
+	MENU_main_ITEMS="debug graphics sound ovcodec ioformat"
 	case "$HOST_SYSTEM" in
 		Darwin)
 			# Installation directory not modifiable
@@ -72,6 +70,7 @@ uqm_prepare_config()
 	MENU_main_ITEM_debug_TYPE=CHOICE
 	MENU_main_ITEM_graphics_TYPE=CHOICE
 	MENU_main_ITEM_sound_TYPE=CHOICE
+	MENU_main_ITEM_ovcodec_TYPE=CHOICE
 	MENU_main_ITEM_ioformat_TYPE=CHOICE
 	MENU_main_ITEM_link_TYPE=CHOICE
 	MENU_main_ITEM_install_path_TYPE=MENU
@@ -149,8 +148,6 @@ uqm_prepare_config()
 	sound_mixsdl_action() {
 		CFLAGS="$CFLAGS -DSOUNDMODULE_SDL"
 		SOUNDMODULE=mixsdl
-		use_library vorbisfile
-#		use_library vorbis
 	}
 	CHOICE_sound_OPTION_openal_TITLE="Include OpenAL support (experimental)"
 	CHOICE_sound_OPTION_openal_PRECOND="have_library openal"
@@ -159,10 +156,27 @@ uqm_prepare_config()
 		CFLAGS="$CFLAGS -DHAVE_OPENAL -DSOUNDMODULE_SDL"
 		SOUNDMODULE=openal
 		use_library openal
+	}
+	CHOICE_sound_DEFAULT=mixsdl
+
+	CHOICE_ovcodec_OPTIONS="standard tremor"
+	CHOICE_ovcodec_TITLE="Ogg Vorbis codec"
+	CHOICE_ovcodec_OPTION_standard_TITLE="Xiph libogg + libvorbis"
+	CHOICE_ovcodec_OPTION_standard_PRECOND="have_library vorbisfile"
+#	CHOICE_ovcodec_OPTION_standard_PRECOND="have_library vorbisfile && have_library vorbis"
+	CHOICE_ovcodec_OPTION_standard_ACTION=ovcodec_standard_action
+	ovcodec_standard_action() {
 		use_library vorbisfile
 #		use_library vorbis
 	}
-	CHOICE_sound_DEFAULT=mixsdl
+	CHOICE_ovcodec_OPTION_tremor_TITLE="Tremor (avoids floating point math)"
+	CHOICE_ovcodec_OPTION_tremor_PRECOND="have_library tremor"
+	CHOICE_ovcodec_OPTION_tremor_ACTION=ovcodec_tremor_action
+	ovcodec_tremor_action() {
+		CFLAGS="$CFLAGS -DOVCODEC_TREMOR"
+		use_library tremor
+	}
+	CHOICE_ovcodec_DEFAULT=standard
 
 	CHOICE_ioformat_OPTIONS="stdio stdio_zip"
 	CHOICE_ioformat_TITLE="Supported file i/o methods"
